k8s/frontend/python-project-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-project
spec:
  selector:
    app: python-project
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-project
spec:
  selector:
    matchLabels:
      app: python-project
  replicas: 1
  template:
    metadata:
      labels:
        app: python-project
    spec:
      containers:
      - name: python-project
        image: spiridonovsv89/python-project:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
