k8s/frontend/python-project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-project-ingress
spec:
    ingressClassName: nginx
    rules:
       - http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: python-project
                  port:
                    number: 5000
              path: /
